--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -87,7 +87,7 @@
     all: unset;
     font-family: "Arial Narrow", Arial, sans-serif;
     width: 100%;
-    height: 50px;
+    height: 40px!important;
     font-size: 20px;
     border: 1px solid #dfdfdf;
     border-radius: 8px;
@@ -114,7 +114,7 @@
     cursor: pointer;
     border: 1px solid #1c3aaf;
     margin: 0px;
-    padding: 0px;
+    padding: 4px 5px!important;
 }
 
 .solder-form-search-section .column .button-search:hover {
@@ -128,8 +128,8 @@
 .solder-form-search-section .column .icon-search {
     width: 50px;
     height: 50px;
-    top: 6px;
-    left: 2px;
+    top: 4px;
+    left: -1px;
     position: relative;
 }
 
